Apply suggestion to docs/user-guide/solvers/incompressible-ns.tex

--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -407,7 +407,7 @@ necessariliy follow the boundaries. The solution in the regions falling outside
 the boundaries is simply that of the boundaries, forcing the flow to behave as
 if there were a real object even if the mesh does not represent it. As shown
 in \cite{LuoSPM}, the boundaries defined in this way are no-slip walls and, in
-any case, the flow is still incompressible. Starting from the usual equations,
+any case, the flow is still incompressible. Starting from the incompressible Navier-Stokes equations,
 the term $\mathbf{f_s}$ is added to the right hand side:
 
 \begin{subequations}
