--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -588,7 +588,7 @@ them. The attribute \inltt{USERDEFINEDTYPE} is compulsory only if the functions
 depend on time, when it must be set to \inltt{"TimeDependent"}.
 
 For immersed boundaries with geometries that cannot be represented by means of
-analytical functions, an STL binary file can be supplied as well. However, the
+analytical functions, an \inltt{.STL} binary file can be supplied as well. However, the
 geometry file must be first converted to FLD format with the \texttt{phifile}
 module of \texttt{FieldConvert}. The simplest way to proceed is by issuing the
 command:
