Apply suggestion to docs/user-guide/solvers/incompressible-ns.tex

--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -598,7 +598,7 @@ command:
 \end{lstlisting}
 
 where the value of \texttt{scale} corresponds to the coefficient $\xi$ in
-equation \eqref{spm:eq:mask}. The output file can be changed to an VTU or DAT
+equation \eqref{spm:eq:mask}. The output file can be changed to a \inltt{.vtu} or \inltt{.dat}
 file in order to get a graphical representation of the Phi field. It is also
 possible to call the \texttt{phifile} module without options to output the
 shape function if it has been defined in the session file as an analytical
