Apply suggestion to docs/user-guide/utilities/fieldconvert.tex

--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -197,7 +197,7 @@ possibly also Reynolds stresses) into single file;
 \item \inltt{surfdistance}: Computes height of a prismatic boundary layer mesh and projects onto the surface (for e.g. $y^+$ calculation).
 \item \inltt{vorticity}: Computes the vorticity field.
 \item \inltt{wss}: Computes wall shear stress field.
-\item \inltt{phifile}: Computes the $\Phi$ function representing a body in an STL file. Useful for the Smoothed Profile Method solver.
+\item \inltt{phifile}: Computes the $\Phi$ function representing a body defined in an STL file. Useful for the Smoothed Profile Method solver.
 \end{enumerate}
 The module list above can be seen by running the command
 %
