--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -1103,7 +1103,7 @@ described in the Synopsis chapter of the Incompressible N-S solver. If the
 output file gets the extension \inltt{.vtu} or \inltt{.dat}, the module will
 produce a graphical representation of the shape function; however, the
 recommended way to proceed is to generate an \inltt{.fld} file and then, use
-the default behavior of FieldConvert to get the VTU or DAT files if needed
+FieldConvert to obtain the \inltt{.vtu} or \inltt{.dat} files if needed for visualisation purposes:
 
 \begin{lstlisting}[style=BashInputStyle]
     FieldConvert -m phifile:file=geom.stl:scale=value session.xml geom.fld
