Apply suggestion to docs/user-guide/solvers/incompressible-ns.tex

--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -394,7 +394,7 @@ $\alpha=1,\beta=0$ weights (see \cite{KaSh05} for details on why).
 The usual way to solve any PDE requires the definition of a well defined domain
 where the solution is to be determined. Thus, for complex geometries, the
 meshing process may get cumbersome and, in any case, the solver will have to
-cope with deformed and skewed cells, at least to some point. In addition, when
+the meshing process may get cumbersome, and likely struggle to avoid the presence of highly deformed and skewed elements. In addition, when
 solving cases with moving boundaries, the mesh has to be updated every time
 step to follow the shape of the boundaries, leading to a very resource and
 time-consuming simulation that limits the capabilities of the solver.
