Apply suggestion to docs/user-guide/solvers/incompressible-ns.tex

--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -590,7 +590,7 @@ depend on time, when it must be set to \inltt{"TimeDependent"}.
 
 For immersed boundaries with geometries that cannot be represented by means of
 analytical functions, an \inltt{.STL} binary file can be supplied as well. However, the
-geometry file must be first converted to FLD format with the \texttt{phifile}
+geometry file must be first converted to \inltt{.fld} format with the \texttt{phifile}
 module of \texttt{FieldConvert}. The simplest way to proceed is by issuing the
 command:
 
