Resolve some threads with formatting issues

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -548,6 +548,21 @@ year = {2016}
     url    = {http://tuprints.ulb.tu-darmstadt.de/id/eprint/7611},
 }
 
+@article{NakayamaSPM,
+  title = {Simulation method to resolve hydrodynamic interactions in colloidal dispersions},
+  author = {Nakayama, Yasuya and Yamamoto, Ryoichi},
+  journal = {Phys. Rev. E},
+  volume = {71},
+  issue = {3},
+  pages = {036707},
+  numpages = {7},
+  year = {2005},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.71.036707},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.71.036707}
+}
+
 @article{LuoSPM,
     abstract = {We re-formulate and analyze a new method for particulate flows, the so-called ``smoothed profile'' method (SPM) first proposed in [Y. Nakayama, R. Yamamoto, Simulation method to resolve hydrodynamic interactions in colloidal dispersions, Phys. Rev. E 71 (2005) 036707], which uses a fixed computational mesh without conformation to the geometry of the particles. The method represents the particles by certain smoothed profiles to construct a body force term added into the Navier--Stokes equations. SPM imposes accurately and efficiently the proper conditions at the particle--fluid interface. In particular, while the original method employs a fully-explicit time-integration scheme we develop a high-order semi-implicit splitting scheme, which we implement in the context of spectral/hp element discretization. First, we show that the modeling error of SPM has a non-monotonic dependence on the time step size \ensuremath{\Delta}t; it is a function of \ensuremath{\nu}\ensuremath{\Delta}t/\ensuremath{\xi}, where \ensuremath{\nu} is the kinematic viscosity of fluid and \ensuremath{\xi} is the interface thickness of the smoothed profile. Subsequently, we present several steady and unsteady simulations, including flow past 3D complex-shaped particles, and compare against direct numerical simulations and the force coupling method (FCM).},
     author = {Luo, Xian and Maxey, Martin R. and Karniadakis, George Em},
