--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -197,7 +197,8 @@ possibly also Reynolds stresses) into single file;
 \item \inltt{surfdistance}: Computes height of a prismatic boundary layer mesh and projects onto the surface (for e.g. $y^+$ calculation).
 \item \inltt{vorticity}: Computes the vorticity field.
 \item \inltt{wss}: Computes wall shear stress field.
-\item \inltt{phifile}: Computes the $\Phi$ function representing a body defined in an STL file. Useful for the Smoothed Profile Method solver.
+\item \inltt{phifile}: Computes the $\Phi$ function representing a body defined
+  in an \inltt{.stl} file. Useful for the Smoothed Profile Method solver.
 \end{enumerate}
 The module list above can be seen by running the command
 %
@@ -1088,9 +1089,9 @@ To process the output file(s) you will need an xml file of the same region.
 \subsection{Calculating the shape function $\Phi$ for an SPM case:
 \textit{phifile} module}
 
-This FieldConvert module converts a binary \inltt{.STL} CAD file into \inltt{.fld} or \inltt{.vtu}/\inltt{.dat}
-files that can be used as inputs for the Smoothed Profile Method solver.
-Running the command:
+This FieldConvert module converts a binary \inltt{.stl} CAD file into
+\inltt{.fld} or \inltt{.vtu}/\inltt{.dat} files that can be used as inputs for
+the Smoothed Profile Method solver. Running the command:
 
 \begin{lstlisting}[style=BashInputStyle]
     FieldConvert -m phifile:file=geom.stl:scale=value session.xml geom.fld
@@ -1103,24 +1104,29 @@ described in the Synopsis chapter of the Incompressible N-S solver. If the
 output file gets the extension \inltt{.vtu} or \inltt{.dat}, the module will
 produce a graphical representation of the shape function; however, the
 recommended way to proceed is to generate an \inltt{.fld} file and then, use
-FieldConvert to obtain the \inltt{.vtu} or \inltt{.dat} files if needed for visualisation purposes:
-
+FieldConvert to obtain the \inltt{.vtu} or \inltt{.dat} files if needed for
+visualisation purposes:
 \begin{lstlisting}[style=BashInputStyle]
     FieldConvert -m phifile:file=geom.stl:scale=value session.xml geom.fld
     FieldConvert session.xml geom.fld geom.vtu
 \end{lstlisting}
-This module can also be used to produce a \inltt{.fld} and \inltt{.vtu} / \inltt{.dat} file of shapes defined directly in the session file through an analytical expression. In this case, the commands simplify to:
+This module can also be used to produce a \inltt{.fld} and \inltt{.vtu} /
+\inltt{.dat} file of shapes defined directly in the session file through an
+analytical expression. In this case, the commands simplify to:
 \begin{lstlisting}[style=BashInputStyle]
     FieldConvert -m phifile session.xml geom.fld
     FieldConvert session.xml geom.fld geom.vtu
 \end{lstlisting}
-The algorithm computes an octree for the triangles in the STL file and then,
-loops over all the nodes of the mesh looking for the shortest distance to the
-3D object. Since this module is currently in experimental phase, it only runs in serial and therefore its performance in computing the shape function from the \inltt{.stl} file is limited, especially in 3D cases.
-not run in parallel yet, the computation of the shape function takes a
-considerable amount of time. In addition to this, it is recommended to make
-sure that the angles between triangles are not strictly equal to $90^\circ$,
-since the algorithm will probably fail to find the real $\Phi$ function.
+
+The algorithm computes an octree for the triangles that define the 3D object
+in the \inltt{.stl} file, and then loops over all the nodes of the
+computational mesh looking for the shortest distance to the 3D object. Since
+this module is currently in experimental phase, it only runs in serial and
+therefore its performance in computing the shape function from the \inltt{.stl}
+file is limited, especially in 3D cases. In addition to this, it is recommended
+to make sure that the angles between triangles are not strictly equal to
+$90^\circ$, since the algorithm will probably fail to find the real $\Phi$
+function.
 %
 %
 %
