--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -1088,7 +1088,7 @@ To process the output file(s) you will need an xml file of the same region.
 
 \subsection{Calculating the shape function $\Phi$ for an SPM case:
 \textit{phifile} module}
-
+\label{s:utilities:fieldconvert:sub:phifile}
 This FieldConvert module converts a binary \inltt{.stl} CAD file into
 \inltt{.fld} or \inltt{.vtu}/\inltt{.dat} files that can be used as inputs for
 the Smoothed Profile Method solver. Running the command:
