Apply suggestion to docs/user-guide/solvers/incompressible-ns.tex

--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -456,7 +456,7 @@ the Velocity Correction Scheme, using the final velocity obtained with this
 method as an intermediate velocity to determine the value of the forcing term.
 The initial equation \eqref{spm:eq:SPMeqmov} is slightly modified and
 integrated in time by means of a \emph{stiffly-stable} scheme and, then,
-splitted into different smaller parts that are solved separately:
+split into different smaller parts that are solved separately:
 
 \begin{equation}
      \frac{\gamma_0\mathbf{u}^{n+1}-\sum_{q=0}^{J-1}\alpha_q~\mathbf{u}^{n-q}}
