Add comment to AeroForcesSPM filter source code and formatting of the user guide

--- a/docs/user-guide/solvers/incompressible-ns.tex
+++ b/docs/user-guide/solvers/incompressible-ns.tex
@@ -1317,6 +1317,7 @@ available for this solver.
 
 \begin{itemize}
   \item \inltt{Aerodynamic forces} (section \ref{filters:AeroForces})
+  \item \inltt{Aerodynamic forces SPM} (section \ref{filters:sub:ForcesSPM})
   \item \inltt{Kinetic energy and enstrophy} (section \ref{filters:Energy})
   \item \inltt{Modal energy} (section \ref{filters:ModalEnergy})
   \item \inltt{Moving body} (section \ref{filters:MovingBody})
