--- a/docs/user-guide/xml/xml-filters.tex
+++ b/docs/user-guide/xml/xml-filters.tex
@@ -149,7 +149,7 @@ difference where $\Phi \neq 0$~\cite{LuoSPM}:
 
 \begin{equation*}
     \frac{\mathbf{F}^n}{\rho} = \frac{1}{\Delta t} \int_{\Omega}
-        \Phi^{n+1}(\mathbf{u^*} - \mathbf{u^n}_p)~\text{d}x
+        \Phi^{n+1}(\mathbf{u^*} - \mathbf{u^n}_p)~\text{d}\Omega
 \end{equation*}
 
 \begin{center}
