Change parameter description from config to configxml

--- a/docs/user-guide/utilities/fieldconvert.tex
+++ b/docs/user-guide/utilities/fieldconvert.tex
@@ -1130,7 +1130,7 @@ Conserving filter or L-SIAC filter, is derived from Jallepalli et al.
 . The L-SIAC filter can be applied using the following command:
 
 \begin{lstlisting}[style=BashInputStyle]
-FieldConvert -m LSIAC:config=config.xml input.xml input.fld output.fld
+FieldConvert -m LSIAC:configxml=config.xml input.xml input.fld output.fld
 \end{lstlisting}
 
 This command constructs the L-SIAC filter using the parameters defined in 
