--- a/pkg/debian/changelog
+++ b/pkg/debian/changelog
@@ -1,8 +1,8 @@
-nektar++ (5.0.1) unstable; urgency=medium
+nektar++ (5.0.1-1) unstable; urgency=medium
 
-  * New upstream release.
+  * New upstream release. 
 
- -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Mon, 17 Aug 2020 10:55:50 +0100
+ -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Mon, 17 Aug 2020 11:06:51 +0100
 
 nektar++ (5.0.0-2) unstable; urgency=medium
 
