Added documentation of 2 phase filters to user guide.

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -591,3 +591,20 @@ year = {2016}
     volume = {172},
     year = {2018}
 }
+
+
+@article{iyer2001,
+	title = {An {Experimentalist}’s {Approach} to {Accurate} {Localization} of {Phase} {Singularities} during {Reentry}},
+	volume = {29},
+	issn = {0090-6964},
+	url = {http://link.springer.com/10.1114/1.1335538},
+	doi = {10.1114/1.1335538},
+	language = {en},
+	number = {1},
+	urldate = {2020-09-24},
+	journal = {Annals of Biomedical Engineering},
+	author = {Iyer, Anand N. and Gray, Richard A.},
+	month = jan,
+	year = {2001},
+	pages = {47--59}
+}
