Fix rsync flags and rename developer-guide output.

--- a/docs/developer-guide/prelims/prelims.tex
+++ b/docs/developer-guide/prelims/prelims.tex
@@ -241,11 +241,11 @@ To compile the Developer's Guide:
     \item Configure the Nektar++ build tree as normal.
     \item Run
     \begin{lstlisting}[style=BashInputStyle]
-    make developers-guide-pdf
+    make developer-guide-pdf
     \end{lstlisting}
     to make the PDF version, or run
     \begin{lstlisting}[style=BashInputStyle]
-    make developers-guide-html
+    make developer-guide-html
     \end{lstlisting}
     to make the HTML version.
 \end{enumerate}
