--- a/docs/user-guide/installation/precompiled.tex
+++ b/docs/user-guide/installation/precompiled.tex
@@ -40,7 +40,7 @@ available.
 	\begin{lstlisting}[style=BashInputStyle]
 	apt update
 	\end{lstlisting}
-	\item Install the required Nektar++ packages, or the complete suite with:
+	\item Install specific Nektar++ packages as required, or install the complete suite with:
 	\begin{lstlisting}[style=BashInputStyle]
 	apt install nektar++
 	\end{lstlisting}
@@ -65,7 +65,8 @@ available.
 
 \section{Installing CentOS/Fedora Packages}
 \label{s:installation:redhat}
-Add a file \inlsh{nektar.repo} to the directory \inlsh{/etc/yum.repos.d/} with the following contents
+\begin{enumerate}
+\item Add a file \inlsh{nektar.repo} to the directory \inlsh{/etc/yum.repos.d/} with the following contents
 \begin{lstlisting}[style=BashInputStyle]
 [Nektar]
 name=nektar
@@ -79,27 +80,40 @@ substituting \inlsh{<baseurl>} for the appropriate line from the table below.
 \toprule
 Distribution & \inlsh{<baseurl>} \\
 \midrule
-Centos 7 & 
-   \texttt{http://www.nektar.info/centos/7/\$basearch}\\
-Centos 8 & 
-\texttt{http://www.nektar.info/centos/8/\$basearch}\\
-Fedora 30 & 
-\texttt{http://www.nektar.info/fedora/30/\$basearch}\\
-Fedora 31 & 
-\texttt{http://www.nektar.info/fedora/31/\$basearch}\\
-Fedora 32 & 
-\texttt{http://www.nektar.info/fedora/32/\$basearch}\\
+Centos & 
+\texttt{http://www.nektar.info/centos/\$releasever/\$basearch}\\
+Fedora & 
+\texttt{http://www.nektar.info/fedora/\$releasever/\$basearch}\\
 \bottomrule
 \end{tabular}
 \end{center}
 }
 
 \begin{notebox}
-The \inltt{\$basearch} variable is automatically replaced by Yum with
-the architecture of your system.
+The \inltt{\$releasever} and \inltt{\$basearch} variables are automatically replaced by Yum with the OS version and architecture of your system.
 \end{notebox}
 
+\item Now install the Nektar++ packages as required, or install the complete suite with:
+\begin{lstlisting}[style=BashInputStyle]
+yum install nektar++
+\end{lstlisting}
+Any additional dependencies required by Nektar++ will be automatically installed.
 
+% Hacky way to get an lstlisting to an argument of a macro
+\newsavebox\installationRpmTip
+\begin{lrbox}{\installationRpmTip}\begin{minipage}{0.8\linewidth}
+        \begin{lstlisting}[style=BashInputStyle]
+        yum search nektar++
+        \end{lstlisting}
+    \end{minipage}
+\end{lrbox}
 
+\begin{tipbox}
+    Nektar++ is split into multiple packages for the different components of the
+    software. A list of available Nektar++ packages can be found using:
+    \noindent\usebox\installationRpmTip
+\end{tipbox}
+
+\end{enumerate}
 % \section{Installing OSX Packages}
 % \label{s:installation:osx}
