--- a/docs/user-guide/utilities/nekmesh.tex
+++ b/docs/user-guide/utilities/nekmesh.tex
@@ -442,7 +442,7 @@ NekMesh Mesh.msh output.msh:msh:order=7
 will generate an order 7 Gmsh mesh. In the rest of these subsections, we discuss
 the various processing modules available within \nm.
 
-With NekMesh you can also turn on the option \inltt{useDefExpansions} to write out the Default Expansion List to make troubleshooting meshes easier:
+With NekMesh you can also turn on the option \inltt{useDefExpansions} to write out the Default Expansion List to make visualising and the troubleshooting of meshes easier:
 %
 \begin{lstlisting}[style=BashInputStyle]
 NekMesh Mesh.msh output.xml:xml:useDefExpansions
