Update docs/user-guide/utilities/nekmesh.tex, CHANGELOG.md files (cherry picked from commit 880e7b568047dd041644ec613f67581d7c4d5a49)

--- a/docs/user-guide/utilities/nekmesh.tex
+++ b/docs/user-guide/utilities/nekmesh.tex
@@ -1004,18 +1004,12 @@ documentation. The following commands are currently supported:
   \item \inltt{Plane Surface}
 \end{itemize}
 
-At the present time, NekMesh does not support the full scripting capabilities of the
-GEO format. The used GEO files should be a straightforward succession of entity
-creations (see list above). This should however allow for the creation of quite
-a wide range of 2D geometries by transformation of arbitrary curves into generic
-splines and arcs.
-
-
-
-
-
-
-
+At the present time, NekMesh does not support the full scripting capabilities of
+the GEO format, but the evaluation of simple variables is supported. The used
+GEO files should be a straightforward succession of entity creations (see list
+above). This should however allow for the creation of quite a wide range of 2D
+and 3D geometries by transformation of arbitrary curves into generic splines and
+arcs.
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../user-guide"
