set useDefExpansions as bool type

--- a/docs/user-guide/utilities/nekmesh.tex
+++ b/docs/user-guide/utilities/nekmesh.tex
@@ -445,7 +445,7 @@ the various processing modules available within \nm.
 With NekMesh you can also turn on the option \inltt{useDefExpansions} to write out the Default Expansion List to make visualising and the troubleshooting of meshes easier:
 %
 \begin{lstlisting}[style=BashInputStyle]
-NekMesh Mesh.msh output.xml:xml:useDefExpansions=true
+NekMesh Mesh.msh output.xml:xml:useDefExpansions
 \end{lstlisting}
 %
 
