--- a/pkg/debian/changelog
+++ b/pkg/debian/changelog
@@ -1,3 +1,9 @@
+nektar++ (5.0.2-1) unstable; urgency=medium
+
+  * New upstream release. 
+
+ -- Chris Cantwell <c.cantwell@imperial.ac.uk>  Wed, 21 Apr 2021 13:49:40 +0100
+
 nektar++ (5.0.1-1) unstable; urgency=medium
 
   * New upstream release. 
