--- a/docs/developer-guide/shared/devguide-preamble.tex
+++ b/docs/developer-guide/shared/devguide-preamble.tex
@@ -199,6 +199,7 @@ openany, % A chapter may start on either a recto or verso page.
   autogobble=true
 }
 \definecolor{gray}{rgb}{0.4,0.4,0.4}
+\definecolor{brown}{RGB}{191,129,65}
 \definecolor{darkblue}{rgb}{0.0,0.0,0.6}
 \definecolor{darkred}{rgb}{0.6,0.0,0.0}
 \definecolor{cyan}{rgb}{0.0,0.6,0.6}
