--- a/docs/developer-guide/solvers/solvers-master.tex
+++ b/docs/developer-guide/solvers/solvers-master.tex
@@ -14,5 +14,6 @@ publicly-available master branch.
 \input{solvers/adr-solver.tex}
 \input{solvers/incompressible-solver.tex}
 \input{solvers/compressible-solver.tex}
+\input{solvers/pulsewave-solver.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
